--- a/projector/templates/projector/project/members.html
+++ b/projector/templates/projector/project/members.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load pagination_tags %}
 {% load sorting_tags %}
+{% load permissions %}
 
 {% block col_main_extra %}
 
@@ -16,7 +17,9 @@
     <h1>{{ project.name }}</h1>
     <h2>Membership</h2>
     <ul class="nav-inline">
+        {% ifhasperm "project_permission.add_member_project" request.user project %}
         <li><a class="button-link" href="{{ project.get_members_add_url }}">{% trans "Add new member" %}</a></li>
+        {% endifhasperm %}
     </ul>
     {% if invalid_page %}
         <div class="messages">
