--- a/projector/templates/projector/project/edit.html
+++ b/projector/templates/projector/project/edit.html
@@ -32,6 +32,9 @@
                     {% endspaceless %}'" value="{% trans "Cancel" %}"/>
             </div>
         </form>
+        <ul class="nav-inline">
+            <li><a class="button-link" href="{{ project.get_milestones_add_url }}">{% trans "Add milestone" %}</a></li>
+        </ul>        
     </div>
 </div>
 {% endblock %}
