--- a/projector/templates/projector/project/details.html
+++ b/projector/templates/projector/project/details.html
@@ -104,12 +104,12 @@
                 <tr>
                     <td class="projector-milestone-progress-table-finished"
                         width="{{ milestone.get_finished_tasks_count_as_percentage }}%">
-                        <a class="block-link" href="{{ project.get_task_list_url }}?milestone={{ milestone.id }}">
+                        <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=2&milestone={{ milestone.id }}">
                             {% trans "Done" %} {{ milestone.get_finished_tasks_count_as_percentage|floatformat:"2" }}%
                         </a>
                     </td>
                     <td class="projector-milestone-progress-table-unfinished">
-                        <a class="block-link" href="{{ project.get_task_list_url }}?milestone={{ milestone.id }}">
+                        <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=3&milestone={{ milestone.id }}">
                             {% trans "Left" %} {{ milestone.get_unfinished_tasks_count_as_percentage|floatformat:"2" }}%
                         </a>
                     </td>
