--- a/projector/templates/projector/task/details.html
+++ b/projector/templates/projector/task/details.html
@@ -134,7 +134,7 @@
                     {% if revision.changes %}
                     <ul>
                         {% for field, values in revision.changes.items %}
-                        <li><strong>{{ field }}</strong> changed from {{ values.0|slice:":20" }} to {{ values.1|slice:":20" }}</li>
+                        <li><strong>{{ field }}</strong> changed from {{ values.1|slice:":20" }} to <strong>{{ values.0|slice:":20" }}</strong></li>
                         {% endfor %}
                     </ul>
                     {% endif %}
