--- a/projector/templates/projector/project/list.html
+++ b/projector/templates/projector/project/list.html
@@ -35,7 +35,7 @@
         <thead class="datatable-thead">
             <tr class="datatable-thead-subheader">
                 <th>{% anchor name "Name" %}</th>
-                <th>{% anchor category Category %}</th>
+                <th>{% anchor category "Category" %}</th>
                 <th>{% anchor author "Author" %}</th>
                 <th>{% anchor created_at "Created at" %}</th>
                 <th>{% anchor task__count "Task count" %}</th>
