Updated name of loaded tags for new richtemplates

--- a/projector/templates/projector/project/changesets.html
+++ b/projector/templates/projector/project/changesets.html
@@ -1,7 +1,7 @@
 {% extends "projector/project/details.html" %}
 
 {% load i18n %}
-{% load richtemplates %}
+{% load richtemplates_tags %}
 {% load projector_tags %}
 
 {% if root.is_file %}
