--- a/projector/templates/projector/project/repository.html
+++ b/projector/templates/projector/project/repository.html
@@ -1,7 +1,7 @@
 {% extends "projector/project/details.html" %}
 
 {% load i18n %}
-{% load richtemplates %}
+{% load richtemplates_tags %}
 
 {% if root.is_file %}
     {% block head_css %}{{ block.super }}
