--- a/projector/templates/projector/project/milestone_detail.html
+++ b/projector/templates/projector/project/milestone_detail.html
@@ -4,23 +4,16 @@
 {% load i18n %}
 {% load permissions %}
 
-{% block extra_head %}{{ block.super }}
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('#id_project_repository_url').click(function(){
-            this.select();
-            console.log('qwe');
-        });
-    });
-</script>
-{% endblock %}
-
 {% block col_main_title %}{{ project.name }}{% endblock %}
 
 {% block col_main_extra %}
 <div class="richtemplates-panel">    
     <h5>{% trans "Milestone detail" %}</h5>
     <div class="richtemplates-panel-content">
+        <ul class="nav-inline">
+            <li><a class="button-link" href="{{ milestone.get_edit_url }}">{% trans "Edit" %}</a></li>
+            <li><a class="button-link" href="{{ milestone.get_tasks_url }}">{% trans "Show tasks" %}</a></li>
+        </ul>
         <div class="task-block">
             <table class="task-block-properties">
                 <tbody>
@@ -44,9 +37,9 @@
                     {% if finished %}
                         <td class="projector-milestone-progress-table-finished"
                             width="{{ milestone.get_finished_tasks_count_as_percentage }}%">
-                            <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=2&milestone={{ milestone.id }}">
-                                {% trans "Done" %} {{ milestone.get_finished_tasks_count_as_percentage|floatformat:"2" }}%
-                            </a>
+                            <a class="block-link"
+                                href="{{ project.get_task_list_url }}?is_resolved=2&milestone={{ milestone.id }}">
+                            {% trans "Done" %} {{ finished|floatformat:"2" }} &#37;</a>
                         </td>
                     {% endif %}
                     {% endwith %}
@@ -54,8 +47,7 @@
                     {% if unfinished %}
                     <td class="projector-milestone-progress-table-unfinished">
                         <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=3&milestone={{ milestone.id }}">
-                            {% trans "Left" %} {{ milestone.get_unfinished_tasks_count_as_percentage|floatformat:"2" }}%
-                        </a>
+                            {% trans "Left" %} {{ unfinished|floatformat:"2" }} &#37;</a>
                     </td>
                     {% endif %}
                     {% endwith %}
