--- a/projector/templates/projector/accounts/user_homepage.html
+++ b/projector/templates/projector/accounts/user_homepage.html
@@ -18,6 +18,7 @@
 {% endblock %}
 
 {% block col_main %}
+{% if user.get_profile %}
 <div class="richtemplates-panel">
     <h5>{% trans "Your homepage" %}</h5>
     <div class="richtemplates-panel-content">
@@ -56,7 +57,9 @@
                 {% endfor %}
             </tbody>
         </table>
+
     </div>
 </div>
+{% endif %}
 {% endblock %}
 
