--- a/projector/templates/projector/project/milestone_detail.html
+++ b/projector/templates/projector/project/milestone_detail.html
@@ -28,37 +28,8 @@
                 </tbody>
             </table>
         </div>
-
-        {% if milestone.task_set.all %}
-        <table class="projetor-milestone-progress-table">
-            <tbody>
-                <tr>
-                    {% with milestone.get_finished_tasks_count_as_percentage as finished %}
-                    {% if finished %}
-                        <td class="projector-milestone-progress-table-finished"
-                            width="{{ milestone.get_finished_tasks_count_as_percentage }}%">
-                            <a class="block-link"
-                                href="{{ project.get_task_list_url }}?is_resolved=2&milestone={{ milestone.id }}">
-                            {% trans "Done" %} {{ finished|floatformat:"2" }} &#37;</a>
-                        </td>
-                    {% endif %}
-                    {% endwith %}
-                    {% with milestone.get_unfinished_tasks_count_as_percentage as unfinished %}
-                    {% if unfinished %}
-                    <td class="projector-milestone-progress-table-unfinished">
-                        <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=3&milestone={{ milestone.id }}">
-                            {% trans "Left" %} {{ unfinished|floatformat:"2" }} &#37;</a>
-                    </td>
-                    {% endif %}
-                    {% endwith %}
-                </tr>
-            </tbody>
-        </table>
-        {% else %}
-            <ul class="messages">
-                <li class="message message-info">{% trans "No tasks for this milestone were found" %}</li>
-            </ul>
-        {% endif %}
+        
+        {% include "projector/project/milestone_progress_table.html" %}
 
     </div>
 </div>
