Fixed problem with deadline not being showed nor saved on task revisions. Added datepicker class to date inputs on forms

--- a/projector/templates/projector/task/create.html
+++ b/projector/templates/projector/task/create.html
@@ -2,6 +2,10 @@
 
 {% load i18n %}
 
+{% block extra_head %}{{ block.super }}
+    {{ form.media }}
+{% endblock %}
+
 {% block col_main_title %}{% if form.instance.id %}{% trans "Update" %}{% else %}{% trans "Create new" %}{% endif %} {% trans "task" %}{% endblock %}
 
 {% block col_main_content %}
