--- a/projector/templates/projector/project/milestone_list.html
+++ b/projector/templates/projector/project/milestone_list.html
@@ -42,31 +42,7 @@
                 </td>
                 <td>
 
-        <table class="projetor-milestone-progress-table">
-            <tbody>
-                <tr>
-                    {% with milestone.get_finished_tasks_count_as_percentage as finished %}
-                    {% if finished %}
-                        <td class="projector-milestone-progress-table-finished"
-                            width="{{ milestone.get_finished_tasks_count_as_percentage }}%">
-                            <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=2&milestone={{ milestone.id }}">
-                                {% trans "Done" %} {{ milestone.get_finished_tasks_count_as_percentage|floatformat:"2" }}%
-                            </a>
-                        </td>
-                    {% endif %}
-                    {% endwith %}
-                    {% with milestone.get_unfinished_tasks_count_as_percentage as unfinished %}
-                    {% if unfinished %}
-                    <td class="projector-milestone-progress-table-unfinished">
-                        <a class="block-link" href="{{ project.get_task_list_url }}?is_resolved=3&milestone={{ milestone.id }}">
-                            {% trans "Left" %} {{ milestone.get_unfinished_tasks_count_as_percentage|floatformat:"2" }}%
-                        </a>
-                    </td>
-                    {% endif %}
-                    {% endwith %}
-                </tr>
-            </tbody>
-        </table>
+                    {% include "projector/project/milestone_progress_table.html" %}
 
                 </td>
             </tr>
