--- a/projector/templates/projector/task/details.html
+++ b/projector/templates/projector/task/details.html
@@ -142,7 +142,13 @@
                     {% if revision.changes %}
                     <ul>
                         {% for field, values in revision.changes.items %}
-                        <li><strong>{{ field }}</strong> changed from {{ values.1|slice:":20" }} to <strong>{{ values.0|slice:":20" }}</strong></li>
+                        <li><strong>{{ field }}</strong>
+                            {% if not values.1 %}
+                                set to
+                            {% else %}
+                                changed from {{ values.1|slice:":20" }} to 
+                            {% endif %}
+                            <strong>{{ values.0|slice:":20" }}</strong></li>
                         {% endfor %}
                     </ul>
                     {% endif %}
