Added table with tasks summaries at project detail page

--- a/projector/templates/projector/accounts/user_homepage.html
+++ b/projector/templates/projector/accounts/user_homepage.html
@@ -42,47 +42,35 @@
             </table>
         </div>
 
-        {% comment %}
-        <h3>{% trans "Member of projects" %}</h3>
-        <table class="datatable">
-            <thead class="datatable-thead">
-                <tr class="datatable-thead-subheader">
-                    <th>{% trans "Project" %}</th>
-                    <th>{% trans "Category" %}</th>
-                </tr>
-            </thead>
-            <tbody class="datatable-tbody">
-                {% for project in profile.user.project_set.all %}
-                <tr class="{% cycle "odd" "even" %} hoverable">
-                    <td><a class="block-link" href="{{ project.get_absolute_url }}">{{ project.name }}</a></td>
-                    <td>{{ project.category|default:"-" }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% endcomment %}
-
         <h1>{% trans "Tasks to do" %}</h1>
         {% regroup owned_task_list by project as project_list %}
         {% for project in project_list %}
-            <h2>{{ project.grouper }}</h2>
+        <h2><a href="{{ project.grouper.get_absolute_url }}">{{ project.grouper }}</a></h2>
             <table class="datatable">
                 <thead class="datatable-thead">
                     <tr class="datatable-thead-subheader lefted">
-                        <th>{% trans "Status" %}</th>
-                        <th>ID</th>
+                        <th class="width-10">{% trans "Status" %}</th>
+                        <th class="width-10">ID</th>
+                        <th class="width-10">{% trans "Deadline" %}</th>
                         <th>{% trans "Summary" %}</th>
                     </tr>
                 </thead>
                 <tbody class="datatable-tbody">
                     {% for task in project.list %}
                     <tr class="{% cycle "odd" "even" %} hoverable">
-                        <td style="width: 10%">
+                        <td>
                             <span class="{% if task.status.is_resolved %}task-closed{% else %}task-open{% endif %}">
                                 {{ task.status }}
                             </span>
                         </td>
-                        <td style="width: 10%">{{ task.id }}</td>
+                        <td>{{ task.id }}</td>
+                        <td>
+                            {% if task.deadline %}
+                            {{ task.deadline }}
+                            {% else %}
+                            <a href="{{ task.get_edit_url }}" class="show-tipsy" title="{% trans "Click to edit and set deadline" %}">{% trans "Not set" %}</a>
+                            {% endif %}
+                        </td>
                         <td><a class="block-link" href="{{ task.get_absolute_url }}">{{ task.summary }}</a></td>
                     </tr>
                     {% endfor %}
