--- a/projector/templates/projector/home.html
+++ b/projector/templates/projector/home.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}richtemplates/css/pygments.css" media="screen" />    
 {% endblock %}
 
+{% block menu_top %}{{ block.super }}
+<div class="menu-top-submenu">
+    <ul class="menu-top-left">
+        <li><a href="{% url projector_home %}">{% trans "Projector homepage" %}</a></li>
+        <li><a href="{% url projector_project_list %}">{% trans "Projects" %}</a></li>
+    </ul>
+</div>
+{% endblock %}
+
 {% block col_left %}
     
     <div class="richtemplates-panel">
