--- a/projector/templates/projector/project/details.html
+++ b/projector/templates/projector/project/details.html
@@ -15,6 +15,57 @@
 </script>
 {% endblock %}
 
+{% block col_left %}{{ block.super }}
+
+<div class="richtemplates-panel">
+    <h5>{% trans "Projects' tasks summary" %}</h5>
+    <div class="richtemplates-panel-content">
+        <table class="datatable">
+                <caption>{% trans "Open tasks" %}</caption>
+                <tr>
+                    <th colspan="2">{% trans "By assignee" %}</th>
+                </tr>
+                {% regroup project.get_open_tasks by owner as tasks_by_owner %}
+                {% for owner in tasks_by_owner %}
+                <tr>
+                    <td>
+                        <a href="{{ owner.grouper.get_absolute_url }}">{{ owner.grouper }}</a>
+                    </td>
+                    <td><a href="{{ project.get_task_list_url }}?is_resolved=3&owner={{ owner.grouper.id }}"
+                            class="block-link show-tipsy"
+                            title="{% trans "Show open tasks for user" %}
+                            {{ owner.grouper }}">{{ owner.list|length }}</a>
+                    </td>
+                </tr>
+                {% endfor %}
+
+                <tr>
+                    <th colspan="2">{% trans "By status" %}</th>
+                </tr>
+                {% regroup project.get_open_tasks by status as tasks_by_status %}
+                {% for status in tasks_by_status %}
+                <tr>
+                    <td>
+                        {{ status.grouper }}
+                    </td>
+                    <td><a href="{{ project.get_task_list_url }}?is_resolved=3&status={{ status.grouper.id }}"
+                            class="block-link show-tipsy"
+                            title="{% trans "Show open tasks with status" %}
+                            {{ status.grouper }}">{{ status.list|length }}</a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <th>{% trans "All open tasks" %}</th>
+                    <th><a href="{{ project.get_task_list_url }}?is_resolved=3"
+                            class="block-link">{{ project.get_open_tasks.count }}</a></th>
+                </tr>
+                {% endfor %}
+        </table>
+    </div>
+</div>
+{% endblock %}
+
 {% block col_main_title %}{{ project.name }}{% endblock %}
 
 {% block col_main %}
@@ -58,8 +109,8 @@
 <div class="richtemplates-panel">    
     <h5>{% trans "Project details" %}</h5>
     <div class="richtemplates-panel-content">
-        <div class="task-block">
-            <table class="task-block-properties">
+        <div class="richblock">
+            <table class="richblock-properties">
                 <tbody>
                     <tr>
                         <th>{% trans "Project" %}</th>
