--- a/projector/templates/projector/task/create.html
+++ b/projector/templates/projector/task/create.html
@@ -9,6 +9,7 @@
 {% block col_main_title %}{% if form.instance.id %}{% trans "Update" %}{% else %}{% trans "Create new" %}{% endif %} {% trans "task" %}{% endblock %}
 
 {% block col_main_content %}
+{% if form %}
     <form action="." method="post">
         <table class="form-table">
             {% include "richtemplates/forms/form.html" %}
@@ -20,5 +21,6 @@
             value="{% trans "Cancel" %}"/>
         </div>
     </form>
+{% endif %}
 {% endblock %}
 
