--- a/projector/templates/projector/project/details.html
+++ b/projector/templates/projector/project/details.html
@@ -83,7 +83,7 @@
             <li><a class="button-link" href="{{ project.get_task_list_url }}">{% trans "Task list" %}</a></li>
             <li><a class="button-link" href="{{ project.get_workflow_url }}">{% trans "Workflow" %}</a></li>
             <li><a class="button-link" href="{{ project.get_members_url }}">{% trans "Members" %}</a></li>
-            {% if project.repository_url %}
+            {% if project.get_repo_url %}
                 <li><a class="button-link" href="{{ project.get_browse_repo_url }}">{% trans "Sources" %}</a></li>
             {% endif %}
         </ul>
